casatables/src/glue.rs

extern "C" {
    pub fn tabledesc_get_column_keywords(
        table_desc: *mut GlueTableDesc,
        col_name: *const StringBridge,
        exc: *mut ExcInfo,
    ) -> *const GlueTableRecord;
}
extern "C" {
    pub fn tabledesc_put_keyword(
        table_desc: *mut GlueTableDesc,
        kw_name: *const StringBridge,
        data_type: GlueDataType,
        n_dims: ::std::os::raw::c_ulong,
        dims: *const ::std::os::raw::c_ulong,
        data: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn tabledesc_put_column_keyword(
        table_desc: *mut GlueTableDesc,
        col_name: *const StringBridge,
        kw_name: *const StringBridge,
        data_type: GlueDataType,
        n_dims: ::std::os::raw::c_ulong,
        dims: *const ::std::os::raw::c_ulong,
        data: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_create(
        path: *const StringBridge,
        table_desc: *mut GlueTableDesc,
        n_rows: ::std::os::raw::c_ulong,
        mode: TableCreateMode,
        initialize: bool,
        tsm_opt: TSMOption,
        exc: *mut ExcInfo,
    ) -> *mut GlueTable;
}
extern "C" {
    pub fn table_alloc_and_open(
        path: *const StringBridge,
        mode: TableOpenMode,
        exc: *mut ExcInfo,
    ) -> *mut GlueTable;
}
extern "C" {
    pub fn table_close_and_free(table: *mut GlueTable, exc: *mut ExcInfo);
}
extern "C" {
    pub fn table_n_rows(table: *const GlueTable) -> ::std::os::raw::c_ulong;
}
extern "C" {
    pub fn table_n_columns(table: *const GlueTable) -> ::std::os::raw::c_ulong;
}
extern "C" {
    pub fn table_get_file_name(
        table: *const GlueTable,
        callback: StringBridgeCallback,
        ctxt: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_get_column_names(
        table: *const GlueTable,
        callback: StringBridgeCallback,
        ctxt: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_n_keywords(table: *const GlueTable) -> ::std::os::raw::c_ulong;
}
extern "C" {
    pub fn table_get_keyword_info(
        table: *const GlueTable,
        callback: KeywordInfoCallback,
        ctxt: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_get_column_keyword_info(
        table: *const GlueTable,
        col_name: *const StringBridge,
        callback: KeywordInfoCallback,
        ctxt: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_get_keywords(table: *mut GlueTable, exc: *mut ExcInfo) -> *const GlueTableRecord;
}
extern "C" {
    pub fn table_get_column_keywords(
        table: *mut GlueTable,
        col_name: *const StringBridge,
        exc: *mut ExcInfo,
    ) -> *const GlueTableRecord;
}
extern "C" {
    pub fn table_put_keyword(
        table: *mut GlueTable,
        kw_name: *const StringBridge,
        data_type: GlueDataType,
        n_dims: ::std::os::raw::c_ulong,
        dims: *const ::std::os::raw::c_ulong,
        data: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_put_column_keyword(
        table: *mut GlueTable,
        col_name: *const StringBridge,
        kw_name: *const StringBridge,
        data_type: GlueDataType,
        n_dims: ::std::os::raw::c_ulong,
        dims: *const ::std::os::raw::c_ulong,
        data: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_copy_rows(
        source: *const GlueTable,
        dest: *mut GlueTable,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_deep_copy_no_rows(
        table: *const GlueTable,
        dest_path: *const StringBridge,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_get_column_info(
        table: *const GlueTable,
        col_name: *const StringBridge,
        n_rows: *mut ::std::os::raw::c_ulong,
        data_type: *mut GlueDataType,
        is_scalar: *mut ::std::os::raw::c_int,
        is_fixed_shape: *mut ::std::os::raw::c_int,
        n_dim: *mut ::std::os::raw::c_int,
        dims: *mut ::std::os::raw::c_ulong,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_remove_column(
        table: *mut GlueTable,
        col_name: *const StringBridge,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_add_scalar_column(
        table: *mut GlueTable,
        data_type: GlueDataType,
        col_name: *const StringBridge,
        comment: *const StringBridge,
        direct: bool,
        undefined: bool,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_add_array_column(
        table: *mut GlueTable,
        data_type: GlueDataType,
        col_name: *const StringBridge,
        comment: *const StringBridge,
        direct: bool,
        undefined: bool,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_add_fixed_array_column(
        table: *mut GlueTable,
        data_type: GlueDataType,
        col_name: *const StringBridge,
        comment: *const StringBridge,
        n_dims: ::std::os::raw::c_ulong,
        dims: *const ::std::os::raw::c_ulong,
        direct: bool,
        undefined: bool,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_get_scalar_column_data(
        table: *const GlueTable,
        col_name: *const StringBridge,
        data: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_get_scalar_column_data_string(
        table: *const GlueTable,
        col_name: *const StringBridge,
        callback: StringBridgeCallback,
        ctxt: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_get_cell_info(
        table: *const GlueTable,
        col_name: *const StringBridge,
        row_number: ::std::os::raw::c_ulong,
        data_type: *mut GlueDataType,
        n_dim: *mut ::std::os::raw::c_int,
        dims: *mut ::std::os::raw::c_ulong,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_get_cell(
        table: *const GlueTable,
        col_name: *const StringBridge,
        row_number: ::std::os::raw::c_ulong,
        data: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_get_cell_string(
        table: *const GlueTable,
        col_name: *const StringBridge,
        row_number: ::std::os::raw::c_ulong,
        callback: StringBridgeCallback,
        ctxt: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_get_cell_string_array(
        table: *const GlueTable,
        col_name: *const StringBridge,
        row_number: ::std::os::raw::c_ulong,
        callback: StringBridgeCallback,
        ctxt: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_put_cell(
        table: *mut GlueTable,
        col_name: *const StringBridge,
        row_number: ::std::os::raw::c_ulong,
        data_type: GlueDataType,
        n_dims: ::std::os::raw::c_ulong,
        dims: *const ::std::os::raw::c_ulong,
        data: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_add_rows(
        table: *mut GlueTable,
        n_rows: ::std::os::raw::c_ulong,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_row_alloc(
        table: *const GlueTable,
        is_read_only: ::std::os::raw::c_uchar,
        exc: *mut ExcInfo,
    ) -> *mut GlueTableRow;
}
extern "C" {
    pub fn table_row_free(row: *mut GlueTableRow, exc: *mut ExcInfo) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_row_read(
        row: *mut GlueTableRow,
        row_number: ::std::os::raw::c_ulong,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_row_copy_and_put(
        src_row: *mut GlueTableRow,
        dest_row_number: ::std::os::raw::c_ulong,
        dest_row: *mut GlueTableRow,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_row_get_cell_info(
        row: *const GlueTableRow,
        col_name: *const StringBridge,
        data_type: *mut GlueDataType,
        n_dim: *mut ::std::os::raw::c_int,
        dims: *mut ::std::os::raw::c_ulong,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_row_get_cell(
        row: *const GlueTableRow,
        col_name: *const StringBridge,
        data: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_row_get_cell_string(
        row: *const GlueTableRow,
        col_name: *const StringBridge,
        callback: StringBridgeCallback,
        ctxt: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_row_get_cell_string_array(
        row: *const GlueTableRow,
        col_name: *const StringBridge,
        callback: StringBridgeCallback,
        ctxt: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_row_put_cell(
        row: *mut GlueTableRow,
        col_name: *const StringBridge,
        data_type: GlueDataType,
        n_dims: ::std::os::raw::c_ulong,
        dims: *const ::std::os::raw::c_ulong,
        data: *mut ::std::os::raw::c_void,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn table_row_write(
        row: *mut GlueTableRow,
        dest_row_number: ::std::os::raw::c_ulong,
        exc: *mut ExcInfo,
    ) -> ::std::os::raw::c_int;
}
